--- a/environment.yml
+++ b/environment.yml
@@ -42,7 +42,8 @@ dependencies:
       - sympy==1.12
       - threaded==4.1.0
       - threadpoolctl==3.2.0
-      - torch==2.0.1
+      - numpy
+      - pandas
       - tqdm==4.66.1
       - triton==2.0.0
       - typing-extensions==4.8.0
