--- a/environment.yml
+++ b/environment.yml
@@ -40,6 +40,9 @@ dependencies:
       - sdeint==0.3.0
       - six==1.16.0
       - sympy==1.12
+      - pot
+      - scipy
+      - matplotlib
       - threaded==4.1.0
       - threadpoolctl==3.2.0
       - numpy
